<resources>
    <string name="app_name">GithubExample</string>
    <string name="error">Network Error</string>
    <string name="inputUserNameHint">Input User Name</string>
    <string name="search">검색</string>
    <string name="profile">프로필</string>
    <string name="notResult">결과 없음</string>
    <string name="repoName">Name</string>
    <string name="repoDescription">Description</string>
    <string name="language">Language</string>
</resources>
